Cleaning up utility classes - ordering functions and renaming for consistency